fixed all <picture> and img on the hover special ones, and also the ::before. Not responsive yet

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -76,17 +76,20 @@ xl 1800px
   position: relative;
 
   picture {
-    width: auto;
-    height: 20rem;
     position: absolute;
     opacity: 0.4;
     transition: all 0.5s ease-in;
+
+    img {
+      width: auto;
+      height: 20rem;
+    }
 
     &.secondary {
       opacity: 0;
       z-index: 1;
       transition: all 0.5s ease-in;
-      &:hover + picture{
+      &:hover + picture {
         opacity: 1;
       }
     }
@@ -104,6 +107,7 @@ xl 1800px
 @mixin hoverMessage {
   &::before {
     content: "Pasa el mouse por encima";
+    position: absolute;
     display: block;
     width: max-content;
     height: auto;
